@@ -1,0 +1,15 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:meta="http://namespaces.zope.org/meta">
+
+    <meta:directives namespace="http://namespaces.zope.org/ftw.upgrade">
+
+        <meta:directive
+            name="importProfile"
+            schema=".zcml.IImportProfileUpgradeStep"
+            handler=".zcml.importProfileUpgradeStep"
+            />
+
+    </meta:directives>
+
+</configure>
