@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<site>
+    <property name="email_from_address" type="string">foo@bar.com</property>
+</site>
